--- a/ce-idp/pom.xml
+++ b/ce-idp/pom.xml
@@ -30,10 +30,14 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
-        <!-- because of some bullshit on M1 macs -->
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
+        <!--        <dependency>-->
+        <!--            &lt;!&ndash; because of some bullshit on M1 macs &ndash;&gt;-->
+        <!--            <groupId>io.netty</groupId>-->
+        <!--            <artifactId>netty-all</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
