Move spring-boot-starter-web out of parent and into children

--- a/ce-rs-user-profile/pom.xml
+++ b/ce-rs-user-profile/pom.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.runpaste</groupId>
-		<artifactId>ce-demos</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>ce-rs-user-profile</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ce-rs-user-profile</name>
-	<description>ce-rs-user-profile</description>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-		</dependency>
-		<!-- from https://cloudentity.com/developers/app-dev-tutorials/springboot/springboot_api_single_cloudentity_oauth_server_trust/ -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-oauth2-jose</artifactId>
-		</dependency>
-	</dependencies>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.runpaste</groupId>
+        <artifactId>ce-demos</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    <groupId>com.example</groupId>
+    <artifactId>ce-rs-user-profile</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>ce-rs-user-profile</name>
+    <description>ce-rs-user-profile</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        <!-- from https://cloudentity.com/developers/app-dev-tutorials/springboot/springboot_api_single_cloudentity_oauth_server_trust/ -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+    </dependencies>
 </project>
