--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,6 @@ build/
 .vscode/
 
 ### Spring Boot Properties ###
-application*.properties
+application-*.properties
+application-*.yaml
+application-*.yml
