--- a/ce-client/pom.xml
+++ b/ce-client/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>ce-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ce-client</name>
-    <description>oidc login app</description>
+    <description>Spring Boot Example for Stateful Web App connecting to a Resource Server</description>
 
     <dependencies>
         <dependency>
@@ -21,6 +21,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
