--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,14 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <scm>
+        <developerConnection>scm:git:https://github.com/tmclnk/ce-demos</developerConnection>
+    </scm>
+
     <dependencies>
 
-    <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
@@ -44,6 +49,10 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
