--- a/ce-idp/pom.xml
+++ b/ce-idp/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>com.runpaste</groupId>
         <artifactId>ce-demos</artifactId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>ce-idp</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>ce-idp</name>
     <description>CloudEntity non-OIDC IdP</description>
     <dependencies>
