--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+## Maven Release Plugin ##
+**/*.releaseBackup
+release.properties
+
 ### STS ###
 .apt_generated
 .classpath
