--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/tmclnk/ce-demos</developerConnection>
+        <developerConnection>scm:git:ssh://github.com/tmclnk/ce-demos</developerConnection>
       <tag>HEAD</tag>
   </scm>
 
