--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
 
     <scm>
-        <developerConnection>scm:git:ssh://github.com/tmclnk/ce-demos</developerConnection>
+      <developerConnection>scm:git:ssh://git@github.com:tmclnk/ce-demos.git</developerConnection>
       <tag>ce-demos-0.0.4</tag>
   </scm>
 
