back to 0.0.4-snapshot

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>ce-demos</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.4-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>ce-demos</name>
     <description>ce-demos</description>
@@ -18,8 +18,8 @@
     </properties>
 
     <scm>
-	    <developerConnection>scm:git:ssh://github.com/tmclnk/ce-demos.git</developerConnection>
-      <tag>ce-demos-0.0.4</tag>
+	    <developerConnection>scm:git:ssh://git@github.com/tmclnk/ce-demos.git</developerConnection>
+      <tag>ce-demos-0.0.4-SNAPSHOT</tag>
   </scm>
 
     <dependencies>
