--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.5</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>ce-demos</artifactId>
@@ -18,9 +19,15 @@
     </properties>
 
     <scm>
-	    <developerConnection>scm:git:ssh://git@github.com/tmclnk/ce-demos.git</developerConnection>
-      <tag>ce-demos-0.0.4-SNAPSHOT</tag>
-  </scm>
+        <developerConnection>scm:git:ssh://git@github.com/tmclnk/ce-demos.git</developerConnection>
+        <tag>ce-demos-0.0.4-SNAPSHOT</tag>
+    </scm>
+    <distributionManagement>
+        <repository>
+            <id>ssh-repository</id>
+            <url>scpexe://idp.runpaste.com/repository</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
 
@@ -55,6 +62,14 @@
                 <artifactId>maven-release-plugin</artifactId>
             </plugin>
         </plugins>
+        <extensions>
+            <!-- Enabling the use of SSH in mvn deplo-->
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh-external</artifactId>
+                <version>1.0-beta-6</version>
+            </extension>
+        </extensions>
     </build>
 
     <modules>
