--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>ce-demos</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>ce-demos</name>
     <description>ce-demos</description>
@@ -19,7 +19,7 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/tmclnk/ce-demos.git</developerConnection>
-        <tag>ce-demos-0.0.5</tag>
+        <tag>ce-demos-0.0.4-SNAPSHOT</tag>
     </scm>
     <distributionManagement>
         <repository>
