--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>deploy</goals>
+                </configuration>
             </plugin>
         </plugins>
         <extensions>
@@ -67,7 +70,6 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh-external</artifactId>
-                <version>1.0-beta-6</version>
             </extension>
         </extensions>
     </build>
