don't fail on javadoc lint stuff

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>ce-demos</description>
     <properties>
         <java.version>17</java.version>
-        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     </properties>
 
     <scm>
