--- a/ce-client/pom.xml
+++ b/ce-client/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>com.runpaste</groupId>
         <artifactId>ce-demos</artifactId>
-        <version>0.0.8-SNAPSHOT</version>
+        <version>0.0.8</version>
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>ce-client</artifactId>
-    <version>0.0.8-SNAPSHOT</version>
+    <version>0.0.8</version>
     <name>ce-client</name>
     <description>Spring Boot Example for Stateful Web App connecting to a Resource Server</description>
 
