--- a/ce-rs-user-profile/pom.xml
+++ b/ce-rs-user-profile/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>com.runpaste</groupId>
         <artifactId>ce-demos</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <version>0.0.10</version>
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>ce-rs-user-profile</artifactId>
-    <version>0.0.10-SNAPSHOT</version>
+    <version>0.0.10</version>
     <name>ce-rs-user-profile</name>
     <description>ce-rs-user-profile</description>
     <dependencies>
