--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>ce-demos</artifactId>
-    <version>0.0.12-SNAPSHOT</version>
+    <version>0.0.12</version>
     <packaging>pom</packaging>
     <name>ce-demos</name>
     <description>ce-demos</description>
@@ -20,7 +20,8 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/tmclnk/ce-demos.git</developerConnection>
-    </scm>
+      <tag>ce-demos-0.0.12</tag>
+  </scm>
     <distributionManagement>
         <repository>
             <id>ssh-repository</id>
