--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,30 +3,32 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.runpaste</groupId>
-        <artifactId>ce-demos</artifactId>
-        <version>0.0.14-SNAPSHOT</version>
+        <artifactId>impersonator-5000</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.runpaste</groupId>
-    <artifactId>ce-idp</artifactId>
-    <version>0.0.14-SNAPSHOT</version>
-    <name>ce-idp</name>
-    <description>CloudEntity non-OIDC IdP</description>
+    <artifactId>client</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>client</name>
+    <description>Impersonator 5000 Client App</description>
+
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
