--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,18 @@
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.runpaste</groupId>
-    <artifactId>ce-demos</artifactId>
-    <version>0.0.14-SNAPSHOT</version>
+    <artifactId>impersonator-5000</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>ce-demos</name>
-    <description>ce-demos</description>
+    <name>impersonator-5000</name>
+    <description>Webhook for OAuth Impersonation Claim Webhooks</description>
     <properties>
         <java.version>17</java.version>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     </properties>
 
     <scm>
-        <developerConnection>scm:git:ssh://git@github.com/tmclnk/ce-demos.git</developerConnection>
+        <developerConnection>scm:git:ssh://git@github.com/tmclnk/impersonator-5000.git</developerConnection>
       <tag>HEAD</tag>
   </scm>
     <distributionManagement>
@@ -75,9 +75,8 @@
     </build>
 
     <modules>
-        <module>ce-client</module>
-        <module>ce-idp</module>
-        <module>ce-rs-user-profile</module>
+        <module>client</module>
+        <module>rs</module>
     </modules>
 
 </project>
