--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     <modules>
         <module>client</module>
         <module>rs</module>
+        <module>model</module>
     </modules>
 
 </project>
