--- a/rs/pom.xml
+++ b/rs/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.runpaste</groupId>
-        <artifactId>impersonator-5000</artifactId>
+        <artifactId>oauth2-demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.runpaste</groupId>
     <artifactId>rs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>rs</name>
-    <description>Impersonator 5000 Resource Server</description>
+    <description>OAuth2 Resource Server</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
