--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>oauth2-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>impersonator-5000</name>
+    <name>oauth2-demo</name>
     <description>Webhook for OAuth Impersonation Claim Webhooks</description>
     <properties>
         <java.version>17</java.version>
